# Local-RAG

./: .gitignore  README.md  gradlew.bat  settings.gradle  setup.ps1  test_upload.ps1
.claude/commands/: bmad-agent-gds-game-designer.md  bmad-agent-gds-game-qa.md  bmad-agent-gds-game-scrum-master.md  bmad-agent-gds-tech-writer.md  bmad-gds-brainstorm-game.md  bmad-gds-code-review.md  bmad-gds-correct-course.md  bmad-gds-create-game-brief.md  bmad-gds-create-gdd.md  bmad-gds-dev-story.md  bmad-gds-game-architecture.md  bmad-gds-gametest-automate.md  bmad-gds-gametest-playtest-plan.md  bmad-gds-generate-project-context.md  bmad-gds-quick-dev.md  bmad-tea-testarch-automate.md  bmad-tea-testarch-test-design.md
.cursor/commands/: bmad-agent-gds-game-architect.md  bmad-agent-gds-game-dev.md  bmad-agent-gds-game-solo-dev.md  bmad-gds-create-story.md  bmad-gds-document-project.md  bmad-gds-game-brief.md  bmad-gds-gametest-framework.md  bmad-gds-gametest-performance.md  bmad-gds-gametest-test-design.md  bmad-gds-gametest-test-review.md  bmad-gds-gdd.md  bmad-gds-narrative.md  bmad-gds-quick-spec.md  bmad-gds-retrospective.md  bmad-gds-sprint-planning.md  bmad-gds-sprint-status.md  bmad-tea-teach-me-testing.md  bmad-tea-testarch-atdd.md  bmad-tea-testarch-ci.md  bmad-tea-testarch-framework.md  bmad-tea-testarch-nfr.md  bmad-tea-testarch-test-review.md  bmad-tea-testarch-trace.md
_bmad-output/planning-artifacts/: architecture.md  (+3 more)
backend/: build.gradle
backend/src/main/cpp/: CMakeLists.txt  bmad_native.cpp  native.cpp
frontend/: index.html  package-lock.json  vite.config.ts
(+193 files in other folders)
